[package]
name = "youtube-twitch-webhook-broadcaster"
authors = ["Charles R. Portwood II <charlesportwoodii@erianna.com>"]
description = "Rebroadcast Youtube and Twitch Events to Discord"
repository = "https://github.com/charlesportwoodii/sunrun-data-api"
version = "0.0.1"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "brotli",
    "gzip",
    "stream",
    "serde_json",
] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3" }
tracing-appender = { version = "^0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
hcl-rs = { version = "^0.8" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = { version = "^1.0" }
tokio = { version = "^1.11", features = ["full"] }
chrono = { version = "^0.4" }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.203"
serde_yaml = "0.9.34"
feed-rs = "2.0.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
webhook = { git = "https://github.com/Alaydriem/webhook-rs" }
bsky-sdk = "0.1.13"
atrium-api = "0.24.8"
ipld-core = "0.4.1"
